# hermes-deep-research

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
proof/: research-report.md  xiaomi-form-draft.md
src/deepresearch/: __init__.py  citer.py  cli.py  extractor.py  pipeline.py  planner.py  reporter.py  searcher.py  synthesizer.py
tests/: test_extractor.py  test_pipeline.py  test_planner.py  test_searcher.py
