[project]
name = "hermes-deep-research"
version = "0.1.0"
description = "Autonomous deep research agent: decompose, search, extract, synthesize, cite, report"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "almer121"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
deepresearch = "deepresearch.cli:main"

[project.urls]
Homepage = "https://github.com/almer121/hermes-deep-research"
Issues = "https://github.com/almer121/hermes-deep-research/issues"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
